cc: Fix missing ready to activate/draw callbacks.

Missing NotifyReadyToActivate/Draw can cause the renderer/browser
compositor to hang. This shows as a ChromeOS hang when overview mode is
toggled continuously and as a renderer hang crash report.

It's possible for TileManager to get into a state where it hits the
raster task limit and the only tiles left after running a set of tasks
are solid color tiles which are required for activate/draw. These solid
color tiles are marked as ready to draw in AssignGpuMemoryToTiles and
therefore ready to activate/draw callbacks aren't scheduled.

It is not known how TileManager gets into this state except that certain
tiling sets are marked as done thereby removing non-solid color tiles
between PrepareTiles and the ready to activate/draw checks.

R=vmpstr@chromium.org
BUG=679970,622080
TEST=TileManagerTest.AllWorkFinished
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2636323002
Cr-Commit-Position: refs/heads/master@{#444204}

Former-commit-id: a8ad82c005ae878c448ae500b3f7b5e3a880ad56